manifests/network-policies/cnp-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "team-a-egress-to-team-b"
  namespace: "team-a"
spec:
  endpointSelector:
    matchLabels:
      team: a
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": team-b
            team: b
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
